--- a/in_UESTC.html
+++ b/in_UESTC.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<script> let ab ='罗杰'</script>
+	<script> let ab ='杨文超'</script>
 	<head>
 		<meta charset="utf-8"/>
 		<title>平安成电智慧通行</title>
